--- a/src/methods/weights_electre.html
+++ b/src/methods/weights_electre.html
@@ -1,4 +1,4 @@
-<!-- Index/Main page  -->
+<!-- Weights method page  -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Main page of MCDA Framework</title>
+    <title>Weights method</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
