--- a/src/index.html
+++ b/src/index.html
@@ -51,20 +51,6 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-           <!-- <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li> -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="cover.html">Logout</a></li>
@@ -83,6 +69,7 @@
         <p>Please, select which methods you want to use in your project.</p>
         <p id="select_method">
           <button class="method_btn" onclick="window.location='methods/weights_electre.html';">Determining the<br/> weights of criteria <br/> <small>for ELECTRE methods </small></button>
+          <button class="method_btn_tri_c" onclick="window.location='methods/electre_tri_c.html';">Electre Tri-C</button>
           <button class="method_btn_new" href="#">New method <br/> <small> in development...</small></button>
         </p>
       </div>
@@ -98,3 +85,4 @@
     <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
+
